--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg" style="background-color: #362d2c">
     <div class="container">
 
-      <a class="navbar-brand" href="index.html">Time Hunters</a>
+      <a class="navbar-brand" href="index.html" id="site-logo">Time Hunters</a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
         aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
